Add form with toppings, size, and button.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
       <p class="lead">CAll US @ WE-EAT-PIZZA ---> (933) 287-4992</p>
     </div>
   </div>
-  
+  <div class="container">
+    <h1>Build your pie:</h1>
+    <form id="pizza-order">
+      <!--Toppings-->
+      <div class="form-group">
+        <h3>PICK YOUR TOPPINGS</h3>
+        <input type="checkbox" name="topping" value="cheese"> Cheese<br>
+        <input type="checkbox" name="topping" value="pepperoni"> Pepperoni<br>
+        <input type="checkbox" name="topping" value="sausage"> Sausage<br>
+        <input type="checkbox" name="topping" value="canada-bacon"> Canadian Bacon<br>
+        <input type="checkbox" name="topping" value="prosciutto"> Prosciutto<br>
+        <input type="checkbox" name="topping" value="anchovy"> Anchovy<br>
+        <input type="checkbox" name="topping" value="mushroom"> Mushroom<br>
+        <input type="checkbox" name="topping" value="green-pepper"> Green Pepper<br>
+        <input type="checkbox" name="topping" value="black-olive"> Black Olive<br>
+        <input type="checkbox" name="topping" value="pineapple"> Pineapple<br>
+        <input type="checkbox" name="topping" value="jalpeno"> Jalpeno<br>
+        <input type="checkbox" name="topping" value="mama-lils"> Mama Lil's<br>
+        <input type="checkbox" name="topping" value="extra-cheese"> Extra Cheese<br>
+        <input type="checkbox" name="topping" value="extra-meat"> Extra Meat<br>
+      </div>
+      <!--Size-->
+      <div class="form-group">
+        <h3>SIZE</h3>
+        <select class="form-control" id="size">
+          <option value="10">Personal</option>
+          <option value="15">Family</option>
+          <option value="20">Extended Family</option>
+          <option value="8">Calzone</option>
+        </select>
+      </div>
+      <button type="submit" class="button" id="pizza-btn">PIZZA</button>
+    </form>
+  </div>
 </body>
 </html>
