Add UI logic to js/scripts.js

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!--Size-->
       <div class="form-group">
         <h3>SIZE</h3>
-        <select class="form-control" id="size">
+        <select class="form-control" id="pizza-size">
           <option value="10">Personal</option>
           <option value="15">Family</option>
           <option value="20">Extended Family</option>
@@ -47,6 +47,9 @@
       </div>
       <button type="submit" class="button" id="pizza-btn">PIZZA</button>
     </form>
+    <span id="pizza-total">
+      <p>Your total will be:</p>
+    </span>
   </div>
 </body>
 </html>
