Add styling images to button and jumbotron.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">Georgie's Pizza Palace</h1>
-      <p class="lead">CAll US @ WE-EAT-PIZZA ---> (933) 287-4992</p>
+      <h1 class="display-3">Georgie's Pizza Palace</h1>
+      <p class="lead">CALL US @ WE-EAT-PIZZA ---> (933) 287-4992</p>
     </div>
   </div>
   <div class="container">
