Put the checkboxes in colums.

--- a/index.html
+++ b/index.html
@@ -18,25 +18,31 @@
     <h1>Build your pie:</h1>
     <form id="pizza-order">
       <!--Toppings-->
-      <div class="form-group">
+      <div class="form-group-1">
         <h3>PICK YOUR TOPPINGS</h3>
-        <input type="checkbox" name="topping" value="cheese"> Cheese<br>
-        <input type="checkbox" name="topping" value="pepperoni"> Pepperoni<br>
-        <input type="checkbox" name="topping" value="sausage"> Sausage<br>
-        <input type="checkbox" name="topping" value="canada-bacon"> Canadian Bacon<br>
-        <input type="checkbox" name="topping" value="prosciutto"> Prosciutto<br>
-        <input type="checkbox" name="topping" value="anchovy"> Anchovy<br>
-        <input type="checkbox" name="topping" value="mushroom"> Mushroom<br>
-        <input type="checkbox" name="topping" value="green-pepper"> Green Pepper<br>
-        <input type="checkbox" name="topping" value="black-olive"> Black Olive<br>
-        <input type="checkbox" name="topping" value="pineapple"> Pineapple<br>
-        <input type="checkbox" name="topping" value="jalpeno"> Jalpeno<br>
-        <input type="checkbox" name="topping" value="mama-lils"> Mama Lil's<br>
-        <input type="checkbox" name="topping" value="extra-cheese"> Extra Cheese<br>
-        <input type="checkbox" name="topping" value="extra-meat"> Extra Meat<br>
+        <div class="form-row">
+          <div class="col-4">
+            <input type="checkbox" name="topping" value="cheese"> Cheese<br>
+            <input type="checkbox" name="topping" value="pepperoni"> Pepperoni<br>
+            <input type="checkbox" name="topping" value="sausage"> Sausage<br>
+            <input type="checkbox" name="topping" value="canada-bacon"> Canadian Bacon<br>
+            <input type="checkbox" name="topping" value="prosciutto"> Prosciutto<br>
+            <input type="checkbox" name="topping" value="extra-cheese"> Extra Cheese<br>
+            <input type="checkbox" name="topping" value="extra-meat"> Extra Meat<br>
+          </div>
+          <div class="col-4">  
+            <input type="checkbox" name="topping" value="anchovy"> Anchovy<br>
+            <input type="checkbox" name="topping" value="mushroom"> Mushroom<br>
+            <input type="checkbox" name="topping" value="green-pepper"> Green Pepper<br>
+            <input type="checkbox" name="topping" value="black-olive"> Black Olive<br>
+            <input type="checkbox" name="topping" value="pineapple"> Pineapple<br>
+            <input type="checkbox" name="topping" value="jalpeno"> Jalpeno<br>
+            <input type="checkbox" name="topping" value="mama-lils"> Mama Lil's<br>
+          </div>  
+        </div>
       </div>
       <!--Size-->
-      <div class="form-group">
+      <div class="form-group-2">
         <h3>SIZE</h3>
         <select class="form-control" id="pizza-size">
           <option value="10">Personal</option>
