Display the pizzas that have been ordered by cost.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p class="lead">CALL US @ WE-EAT-PIZZA ---> (933) 287-4992</p>
     </div>
   </div>
-  <div class="container" id="pizza">
+  <div class="container">
     <form id="pizza-order">
       <h1>Build your pie:</h1>
       <!--Toppings-->
@@ -57,7 +57,10 @@
     </form>
   </div>
   <div class="container" id="pizza-receipt"> 
-    <h3>Your total will be:<span id="pizza-total"></span></h3>
+    <h2 class="pb-3">Your total:<span id="pizza-total"></span></h2>
+    <h3>Pizzas in your order:</h3>
+        <ul id="pizzas">
+        </ul>
     <p>Would you like<button type="button" class="button" id="another-pizza">Another PIZZA?</button></p>
   </div>  
 </body>
